# asteval

./: .codecov.yml  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  INSTALL  LICENSE  MANIFEST.in  PKG-INFO  Pipfile  README.TXT  README.rst  README.txt  api.html  azure-pipelines.yml  basics.html  genindex.html  index.html  installation.html  make_wininsts.bat  motivation.html  objects.inv  params.json  publish_docs.sh  py-modindex.html  pylintrc  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.sh  upload_wininst.bat
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  macos_numpy.yml  pylint.yml  test-python.yml  test-python_pydevel.yml  test_macos_with_numpy.yml  test_ubuntu_with_numpy.yml  test_ubuntu_without_numpy.yml  test_windows_with_numpy.yml  test_without_numpy.yml  ubuntu_nonumpy.yml  ubuntu_numpy.yml  windows_numpy.yml
_sources/: api.rst.txt  api.txt  basics.rst.txt  basics.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  motivation.rst.txt  motivation.txt
_static/: bizstyle.js  documentation_options.js
asteval/: __init__.py  _version.py  asteval.py  astutils.py  exceptions.py  frame.py  function.py  module.py  scope.py
doc/: Makefile  api.rst  basics.rst  conf.py  index.rst  install_rst_extra.txt  installation.rst  motivation.rst
doc/_templates/: indexsidebar.html
lib/: __init__.py  asteval.py  astutils.py
tests/: runtests.py  test_1.py  test_asteval.py  test_asteval_orig.py  test_suite.py  test_with_nested_namespace.py  testsuite.py  unittest_1.py  unittest_utils.py
tests/scripts/: assert_statement.py  assignment.py  binop.py  boolean.py  builtins.py  closure.py  delete.py  dictcomp.py  dictionary.py  exception1.py  exception10.py  exception11.py  exception2.py  exception3.py  exception4.py  exception5.py  exception6.py  exception7.py  exception8.py  exception9.py  for_else.py  for_loop.py  for_loop2.py  func.py  func_args.py  func_kwargs.py  if_expr.py  if_statement.py  importee0.py  importee1.py  importer.py  importer2.py  index_assign.py  large_data.py  list.py  listcomp.py  math.py  misc.py  num_cmp.py  print_func.py  (+25 more)
