[metadata]
name = asteval
description = Safe, minimalistic evaluator of python expression using ast module
long_description =
    ASTEVAL provides a numpy-aware, safe(ish) 'eval' function
    Emphasis is on mathematical expressions, and so numpy ufuncs
    are used if available.  Symbols are held in the Interpreter
    symbol table 'symtable':  a simple dictionary supporting a
    simple, flat namespace.
    Expressions can be compiled into ast node for later evaluation,
    using the values in the symbol table current at evaluation time.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://github.com/newville/asteval
license = MIT License
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy

project_urls =
    Source =  https://github.com/newville/asteval
    Documentation = https://newville.github.io/asteval/
    Tracker = https://github.com/newville/asteval/issues


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
test_requires = pytest
install_requires =
    importlib_metadata ; python_version < "3.8"

[options.packages.find]
include =
    asteval

[options.extras_require]
dev =
    build
    twine
doc =
    Sphinx

test =
    coverage
    pytest
    pytest-cov
all =
    %(dev)s
    %(test)s
    %(doc)s


[coverage:run]
omit = tests/*

[tool:pytest]
addopts = --cov=asteval --cov-report xml
